Turn the default string serializer into an interface with a default method